2006-12-06  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrush.c: made "spacing" a property.

	* app/core/gimpbrushgenerated-save.c
	* app/core/gimpbrushgenerated.c
	* app/core/gimpbrushpipe.c: use it. Don't access brush->spacing
	manually, always use accessors.

2006-12-05  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am
	* tools/rmshm: removed this undocumented tool.

2006-12-05  Simon Budig  <simon@gimp.org>

	* plug-ins/common/antialias.c: trivial fix for bug #382445

2006-12-04  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.h: removed unused defines.

2006-12-03  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppainttool.c (gimp_paint_tool_init): don't
	autoscroll with paint tools.

2006-12-02  Mukund Sivaraman  <muks@mukund.org>

	* devel-docs/debug-plug-ins.txt: added a recipe for debugging
	plug-ins

2006-12-02  Mukund Sivaraman  <muks@mukund.org>

	* configure.in: dropped the required libcurl version to 7.15.1
	* plug-ins/Makefile.am: made uri build on win32 if libcurl is
	detected

2006-12-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/film.c: applied patch from Aurimas Juška. Fixes
	crash when opening layers with offsets and/or smaller than image
	(bug #364429).

2006-11-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppropwidgets.c (gimp_prop_color_button_new):
	removed obsolete parameter from gtk-doc comment.

2006-11-30  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimp.def
	* libgimpbase/gimpbase.def: move around version number symbols
	here too. Fixes bug #380658.

2006-11-28  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimp.[ch]: removed gimp_foo_version variables.

	* libgimpbase/gimpenv.[ch]: added them here.

	* app/sanity.c: added sanity_check_gimp() and abort if the libgimp
	version gimp is compiled with is not exactly the same we encounter
	at runtime.

2006-11-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-api.h
	* plug-ins/pygimp/pygimp.h